[refactor] change get on post in users/calories
*Js*
-  Change get on post in users/calories
- Add requered() in JoiSchemaCalories
- Change false on true in caloriesController and  privateCaloriesController
- Add /users/calories in swagger.json
