# controller/caloriesControllers/caloriesController.js
@@ -13,7 +13,7 @@ const caloriesController = async (req, res) => {
 
   const result = await Product.find(
     {
-      [`groupBloodNotAllowed.${bloodType}`]: false,
+      [`groupBloodNotAllowed.${bloodType}`]: true,
     },
     { categories: 1 }
   );
